Fix word wrap take 2

--- a/src/assets/css/_pkg_help.scss
+++ b/src/assets/css/_pkg_help.scss
@@ -56,8 +56,8 @@
         }
          */
 
-        td {
-          word-break: normal;
+        code {
+          word-break: unset;
         }
 
         th {
