--- a/src/assets/css/_typography.scss
+++ b/src/assets/css/_typography.scss
@@ -49,7 +49,7 @@ blockquote {
   color: $gray-text-color;
 }
 
-p, h1, h2, h3, h4, h5, h6, th, td, code {
+p, h1, h2, h3, h4, h5, h6, code {
   word-break: break-word;
 }
 
